--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   <div class="flex-container-column">
+    <div class="display"></div>
+
     <div class="flex-container-row">
       <div class="button">7</div>
       <div class="button">8</div>
