--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
   <div class="flex-container-column">
-    <div class="display"></div>
+    <div class="display">
+      <h1 id="displayNumber">0</h1>
+    </div>
 
     <div class="flex-container-row">
       <div class="button">7</div>
