--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Web Calculator</title>
   <link rel="stylesheet" href="assets/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="flex-container-column card">
