--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
       <div class="button equals double">=</div>
     </div>
   </div>
+
+  <script src="assets/kalkulator.js"></script>
 </body>
 </html>
